--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -42,7 +42,7 @@
                 </div>
               </div>
               {% if page.result.status == "full time" %}
-              <div class="row row-cols-2 g-0 px-0 pb-5">
+              <div class="row row-cols-2 g-0 px-0">
                 {% if page.result.goal.home %}
                 <ul class="col list-group">
                   {% for goal in page.result.goal.home %}
@@ -59,7 +59,7 @@
                 {% endif %}
               </div>
               {% endif %}
-              <p class="card-text text-capitalize fw-bolder text-secondary pt-3"><i class="fa-solid fa-location-dot text-secondary pe-2"></i>{{ page.place }}</p>
+              <p class="card-text text-capitalize fw-bolder text-secondary pt-5"><i class="fa-solid fa-location-dot text-secondary pe-2"></i>{{ page.place }}</p>
             </div>
           </div>
         </div>
