--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -25,7 +25,7 @@
   </div>
 </header>-->
 
-<header style="height: 560px; background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat; width: 100%;">
+<header style="height: 560px; background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat; width: 100%;">
   <div class="h-100 d-flex flex-column justify-content-between text-white">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
