--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -1,4 +1,4 @@
-<header style="min-height: 20rem; background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;  width: 100%; height: auto;">
+<header style="min-height: 20rem; background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('{{ page.image }}'); background-size: contain; background-position: center; background-repeat: no-repeat;  width: 100%; height: auto;">
   <div class="text-white">
     <div class="container pt-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
