--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -1,9 +1,9 @@
-<header style="height: 100%; background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;  width: 100%; height: 100%;">
-  <div class="h-100 text-white">
-    <div class="container pt-3">
+<header class="container-fluid p-0" style="background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;  width: 100%; height: auto">
+  <div class="text-white">
+    <div class="container py-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
-        <a href="/" class="d-flex align-items-center col-md-3 link-light text-decoration-none text-uppercase fw-bold">
-          <img src="{{ '/assets/img/logo-2-new.svg' | relative_url }}" alt="" class="border-0 rounded-circle shadow me-2" width="35" height="35">
+        <a href="/" class="d-flex align-items-center col-md-3 link-light text-decoration-none text-uppercase fw-bolder">
+          <img src="{{ '/assets/img/logo-1-new.svg' | relative_url }}" alt="" class="border-0 rounded-circle shadow me-2" width="35" height="35">
           {{ site.title }}
         </a>
         <nav class="nav col-12 col-md-auto justify-content-center mb-md-0">
