--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -3,7 +3,7 @@
     {% if page.image %}
     <img src="{{ page.image }}" alt="" class="card-img">
     {% endif %}
-    <div class="container card-img-overlay py-3">
+    <div class="container py-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
         <a href="/" class="d-flex align-items-center col-md-3 link-light text-decoration-none text-uppercase fw-bolder">
           <img src="{{ '/assets/img/logo-1-new.svg' | relative_url }}" alt="" class="border-0 rounded-circle shadow me-2" width="35" height="35">
