--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -1,5 +1,5 @@
 <header style="min-height: 18rem;">
-  <div class="text-white" style="background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('{{ page.image }}'), background-size: auto, background-position: center, background-repeat: no-repeat;">
+  <div class="text-white bg-transparent" style="background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('{{ page.image }}'), background-size: auto, background-position: center, background-repeat: no-repeat;">
     <div class="container py-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
         <a href="/" class="d-flex align-items-center col-md-3 link-light text-decoration-none text-uppercase fw-bolder">
