--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -1,9 +1,9 @@
-<header style="height: auto; background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url('{{ page.image }}'); background-size: 100% 100%; background-position: center; background-repeat: no-repeat; width: 100%; height: auto;"> 
+<header style="min-height: 20rem; background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url('{{ page.image }}'); background-size: 100% 100%; background-position: center; background-repeat: no-repeat; width: 100%; height: auto;"> 
   <div class="text-white">
     <div class="container py-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
         <a href="/" class="d-flex align-items-center col-md-3 link-light text-decoration-none text-uppercase fw-bolder">
-          <img src="{{ '/assets/img/logo-1-new.svg' | relative_url }}" alt="" class="border-0 rounded-circle shadow me-2" width="30" height="30">
+          <img src="{{ '/assets/img/logo-2-new.svg' | relative_url }}" alt="" class="border-0 rounded-circle shadow me-2" width="30" height="30">
           {{ site.title }}
         </a>
         <nav class="nav col-12 col-md-auto justify-content-center mb-md-0">
