--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -1,9 +1,9 @@
 <header class="text-white bg-dark" style="height: 720px; background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;">
   <div class="h-100">
-    <div class="container pt-3">
+    <div class="container py-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
-        <a href="/" class="d-flex align-items-center col-md-3 text-white text-decoration-none fw-bold text-uppercase">
-          <img src="{{ '/assets/img/logo-2-new.svg' | relative_url }}" alt="" class="border-0 rounded-circle shadow me-2" width="35" height="35">
+        <a href="/" class="d-flex align-items-center col-md-3 text-white text-decoration-none fw-bolder text-uppercase">
+          <img src="{{ '/assets/img/logo-2-new.svg' | relative_url }}" alt="" class="border-0 rounded-circle shadow me-2" width="30" height="30">
           {{ site.title }}
         </a>
         <nav class="nav col-12 col-md-auto justify-content-center mb-md-0">
