--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -27,10 +27,10 @@
 
 <header style="height: 560px; background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat; width: 100%;">
   <div class="h-100 d-flex flex-column justify-content-between text-white">
-    <div class="container pt-3">
+    <div class="container py-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
-        <a href="/" class="d-flex align-items-center col-md-3 link-light text-decoration-none text-uppercase fw-bold">
-          <img src="{{ '/assets/img/logo-2-new.svg' | relative_url }}" alt="" class="border-0 rounded-circle shadow me-2" width="35" height="35">
+        <a href="/" class="d-flex align-items-center col-md-3 link-light text-decoration-none text-uppercase fw-bolder">
+          <img src="{{ '/assets/img/logo-2-new.svg' | relative_url }}" alt="" class="border-0 rounded-circle shadow me-2" width="30" height="30">
           {{ site.title }}
         </a>
         <nav class="nav col-12 col-md-auto justify-content-center mb-md-0">
