--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -1,4 +1,4 @@
-<header style="min-height: 16rem; background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat; width: 100%; height: auto;"> 
+<header style="min-height: 480px; background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat; width: 100%; height: auto;"> 
   <div class="text-white">
     <div class="container py-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
