--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="container-sm pb-3">
-      <div class="d-flex flex-sm-column justify-content-between text-white">
+      <div class="d-flex flex-column flex-md-row justify-content-between text-white">
         <div class="">
           <img src="{% if page.image %}{{ page.image }}{% else %}{{ '/assets/img/pp/blank-pp.svg' | relative_url }}{% endif %}" alt="" class="img-fluid rounded-0">
         </div>
