--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -42,11 +42,11 @@
       </div>
     </div>
     <div class="container-sm pb-3">
-      <div class="d-flex flex-column flex-md-row justify-content-center justify-content-between align-items-end text-white">
-        <div class="">
+      <div class="row row-cols-1 row-cols-md-2 g-2">
+        <div class="col">
           <img src="{% if page.image %}{{ page.image }}{% else %}{{ '/assets/img/pp/blank-pp.svg' | relative_url }}{% endif %}" alt="" class="img-fluid rounded-0">
         </div>
-        <div>
+        <div class="col">
           <p class="fs-1 fw-bolder">{{ page.no-punggung }}</p>
           <p class="fs-2 fw-bolder m-0">{{ page.title }}</p>
         </div>
