--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -46,7 +46,7 @@
         <div class="col">
           <img src="{% if page.image %}{{ page.image }}{% else %}{{ '/assets/img/pp/blank-pp.svg' | relative_url }}{% endif %}" alt="" class="img-fluid rounded-0">
         </div>
-        <div class="col text-white text-center text-md-start">
+        <div class="col d-flex flex-column justify-content-end text-white text-center text-md-start">
           <p class="fs-1 fw-bolder text-uppercase mb-0">{{ page.no-punggung }}</p>
           <p class="fs-2 fw-bolder text-capitalize">{{ page.title }}</p>
         </div>
