--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -43,7 +43,7 @@
     </div>
     <div class="container-sm pb-3">
       <div class="row row-cols-1 row-cols-md-2 g-1">
-        <div class="col">
+        <div class="col bg-dark">
           <img src="{% if page.image %}{{ page.image }}{% else %}{{ '/assets/img/pp/blank-pp.svg' | relative_url }}{% endif %}" alt="" class="img-fluid rounded-0">
         </div>
         <div class="col d-flex flex-column justify-content-end text-white text-center text-md-start">
