--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -47,8 +47,8 @@
           <img src="{% if page.image %}{{ page.image }}{% else %}{{ '/assets/img/pp/blank-pp.svg' | relative_url }}{% endif %}" alt="" class="img-fluid rounded-0">
         </div>
         <div class="col d-flex flex-column justify-content-center text-white text-center text-md-start">
-          <p class="fs-1 fw-bolder text-uppercase mb-0">{{ page.no-punggung }}</p>
-          <p class="fs-2 fw-bolder text-capitalize">{{ page.title }}</p>
+          <p class="fw-bolder text-uppercase mb-0" style="font-size: 5em;">{{ page.no-punggung }}</p>
+          <p class="fw-bolder text-capitalize" style="font-size: 3em;">{{ page.title }}</p>
         </div>
       </div>
     </div>
