--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -1,5 +1,5 @@
 
-<header style="min-height: 480px; background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5));">
+<header style="min-height: 480px; background-image: linear-gradient(to bottom left, rgba(33, 33, 33, 33), rgba(21, 21, 21, 21), rgba(33, 33, 33, 33));">
   <div>
     <div class="container py-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
@@ -22,7 +22,7 @@
         </div>
         <div class="col d-flex flex-column justify-content-center text-white text-center text-md-start">
           <p class="fw-bolder text-uppercase lh-1 mb-2" style="font-size: 4em;">{{ page.no-punggung }}</p>
-          <p class="fw-bolder text-capitalize lh-1" style="font-size: 3em;">{{ page.title }}</p>
+          <p class="fw-bolder text-uppercase lh-1" style="font-size: 3em;">{{ page.title }}</p>
         </div>
       </div>
     </div>
