--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -58,12 +58,13 @@ header: header-match
 {% if page.stat %}
 <div>
   <div class="container-sm">
+    <h1 class="fw-bolder text-uppercase py-5">lineup</h1>
     <table class="table">
       <tbody>
         <tr>
           <td>{{ page.stat.home.shots }}</td>
-          <td>Shots</td>
-          <td>{{ page.stat.away.shots }}</td>
+          <td class="text-center">Shots</td>
+          <td class="text-end">{{ page.stat.away.shots }}</td>
         </tr>
         <tr>
           <td>{{ page.stat.home.shots-on-goal }}</td>
