--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -56,9 +56,9 @@ header: header-match
 {% endif %}
 
 {% if page.stat %}
-<div>
+<div class="py-5">
   <div class="container-sm">
-    <h1 class="fw-bolder text-uppercase py-5">Statistics</h1>
+    <h1 class="fw-bolder text-uppercase">Statistics</h1>
     <table class="table">
       <tbody>
         <tr>
