--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -58,7 +58,7 @@ header: header-match
 {% if page.stat %}
 <div class="py-5">
   <div class="container-sm">
-    <h1 class="fw-bolder text-uppercase">Statistics</h1>
+    <h1 class="fw-bolder text-uppercase pb-3">Statistics</h1>
     <table class="table">
       <tbody>
         <tr>
