--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -71,6 +71,31 @@ header: header-match
           <td class="text-center">Shots on goal</td>
           <td class="text-end">{{ page.stat.away.shots-on-goal }}</td>
         </tr>
+        <tr>
+          <td>{{ page.stat.home.ball-possession }}</td>
+          <td class="text-center">Ball Possession</td>
+          <td class="text-end">{{ page.stat.away.ball-possession }}</td>
+        </tr>
+        <tr>
+          <td>{{ page.stat.home.fouls }}</td>
+          <td class="text-center">Fouls</td>
+          <td class="text-end">{{ page.stat.away.fouls }}</td>
+        </tr>
+        <tr>
+          <td>{{ page.stat.home.yellow-cards }}</td>
+          <td class="text-center">Yellow Cards</td>
+          <td class="text-end">{{ page.stat.away.yellow-cards }}</td>
+        </tr>
+        <tr>
+          <td>{{ page.stat.home.offsides }}</td>
+          <td class="text-center">Offsides</td>
+          <td class="text-end">{{ page.stat.away.offsides }}</td>
+        </tr>
+        <tr>
+          <td>{{ page.stat.home.corners }}</td>
+          <td class="text-center">Corners</td>
+          <td class="text-end">{{ page.stat.away.corners }}</td>
+        </tr>
       </tbody>
     </table>
   </div>
