--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -56,7 +56,7 @@ header: header-match
 {% endif %}
 
 {% if page.stat %}
-<div class="py-5">
+<div class="text-white bg-dark py-5">
   <div class="container-sm">
     <h1 class="fw-bolder text-uppercase pb-3">Statistics</h1>
     <table class="table">
