--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -59,7 +59,7 @@ header: header-match
 <div class="text-white bg-dark py-5">
   <div class="container-sm">
     <h1 class="fw-bolder text-uppercase pb-3">Statistics</h1>
-    <table class="table">
+    <table class="table table-dark">
       <tbody>
         <tr>
           <td>{{ page.stat.home.shots }}</td>
