--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -60,6 +60,13 @@ header: header-match
   <div class="container-sm">
     <h1 class="fw-bolder text-uppercase pb-3">Statistics</h1>
     <table class="table table-dark">
+      <thead>
+        <tr>
+          <th scope="col">{{ page.home.name }}</th>
+          <th scope="col">vs</th>
+          <th scope="col">{{ page.away.name }}</th>
+        </tr>
+      </thead>
       <tbody>
         <tr>
           <td>{{ page.stat.home.shots }}</td>
