--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -62,9 +62,9 @@ header: header-match
     <table class="table table-dark">
       <thead>
         <tr>
-          <th scope="col">{{ page.home.name }}</th>
-          <th scope="col">vs</th>
-          <th scope="col">{{ page.away.name }}</th>
+          <th scope="col" class="text-uppercase fw-bolder">{{ page.home.name }}</th>
+          <th scope="col" class="text-center text-uppercase fw-bolder">vs</th>
+          <th scope="col" class="text-end text-uppercase fw-bolder">{{ page.away.name }}</th>
         </tr>
       </thead>
       <tbody>
