--- a/_includes/header-match.html
+++ b/_includes/header-match.html
@@ -25,7 +25,7 @@
               <div class="row row-cols-3 text-center py-3">
                 <div class="col">
                   <img src="{% if page.home.logo %}{{ page.home.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' }}{% endif %}" alt="" class="d-block mx-auto border-0 rounded-circle pb-2" width="75" height="75">
-                  <span class="fw-bold text-uppercase">
+                  <span class="fw-bold text-uppercase lh-1">
                     {{ page.home.name }}
                   </span>
                 </div>
@@ -36,7 +36,7 @@
                 {% endif %}
                 <div class="col">
                   <img src="{% if page.away.logo %}{{ page.away.logo | relative_url }}{% else %}{{ '/assets/img/logo/logo-blank.svg' }}{% endif %}" alt="" class="d-block mx-auto border-0 rounded-circle pb-2" width="75" height="75">
-                  <span class="fw-bold text-uppercase">
+                  <span class="fw-bold text-uppercase lh-1">
                     {{ page.away.name }}
                   </span>
                 </div>
