--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -58,7 +58,17 @@ header: header-match
 {% if page.stat %}
 <div class="text-white bg-dark py-5">
   <div class="container-sm">
-    <h1 class="fw-bolder text-uppercase pb-3">Statistics</h1>
+    <h1 class="fw-bolder text-uppercase pb-5">Statistics</h1>
+    <div class="d-flex justify-content-between">
+      <div>
+        <img src="{% if page.home.logo %}{{ page.home.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0" width="30" height="30">
+        <span class="d-block text-uppercase">{{ page.home.name }}</span>
+      </div>
+      <div>
+        <img src="{% if page.away.logo %}{{ page.away.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0" width="30" height="30">
+        <span class="d-block text-uppercase">{{ page.away.name }}</span>
+      </div>
+    </div>
     <table class="table table-dark">
       <tbody>
         <tr>
