--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -61,12 +61,12 @@ header: header-match
     <h1 class="fw-bolder text-uppercase pb-5">Statistics</h1>
     <div class="d-flex justify-content-between pb-3">
       <div>
-        <img src="{% if page.home.logo %}{{ page.home.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block border-0 float-start" width="30" height="30">
-        <span class="d-block text-uppercase fw-bolder pt-1">{{ page.home.name }}</span>
+        <img src="{% if page.home.logo %}{{ page.home.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block border-0" width="30" height="30">
+        <span class="text-uppercase fw-bolder ps-1">{{ page.home.name }}</span>
       </div>
       <div>
-        <img src="{% if page.away.logo %}{{ page.away.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block border-0 float-end" width="30" height="30">
-        <span class="d-block text-uppercase fw-bolder pt-1">{{ page.away.name }}</span>
+        <span class="text-uppercase fw-bolder pe-1">{{ page.away.name }}</span>
+        <img src="{% if page.away.logo %}{{ page.away.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block border-0" width="30" height="30">
       </div>
     </div>
     <table class="table table-dark">
