--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -60,13 +60,13 @@ header: header-match
   <div class="container-sm">
     <h1 class="fw-bolder text-uppercase pb-5">Statistics</h1>
     <div class="d-flex justify-content-between pb-3">
-      <div>
+      <div class="text-start">
         <img src="{% if page.home.logo %}{{ page.home.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block border-0" width="30" height="30">
-        <span class="text-uppercase fw-bolder ps-1">{{ page.home.name }}</span>
+        <span class="text-uppercase fw-bolder">{{ page.home.name }}</span>
       </div>
-      <div>
-        <span class="text-uppercase fw-bolder pe-1">{{ page.away.name }}</span>
+      <div class="text-end">
         <img src="{% if page.away.logo %}{{ page.away.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block border-0" width="30" height="30">
+        <span class="text-uppercase fw-bolder">{{ page.away.name }}</span>
       </div>
     </div>
     <table class="table table-dark">
