--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -59,18 +59,23 @@ header: header-match
 <div class="text-white bg-dark py-5">
   <div class="container-sm">
     <h1 class="fw-bolder text-uppercase pb-5">Statistics</h1>
-    <div class="d-flex justify-content-between pb-3">
+    <div class="d-flex justify-content-between pb-4">
       <div class="text-start">
         <img src="{% if page.home.logo %}{{ page.home.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block border-0" width="30" height="30">
         <span class="text-uppercase fw-bolder">{{ page.home.name }}</span>
       </div>
       <div class="text-end">
-        <img src="{% if page.away.logo %}{{ page.away.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block border-0" width="30" height="30">
+        <img src="{% if page.away.logo %}{{ page.away.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block float-end border-0" width="30" height="30">
         <span class="text-uppercase fw-bolder">{{ page.away.name }}</span>
       </div>
     </div>
     <table class="table table-dark">
       <tbody>
+        <tr>
+          <td>{{ page.stat.home.ball-possession }}</td>
+          <td class="text-center">Ball Possession</td>
+          <td class="text-end">{{ page.stat.away.ball-possession }}</td>
+        </tr>
         <tr>
           <td>{{ page.stat.home.shots }}</td>
           <td class="text-center">Shots</td>
@@ -80,11 +85,6 @@ header: header-match
           <td>{{ page.stat.home.shots-on-goal }}</td>
           <td class="text-center">Shots on goal</td>
           <td class="text-end">{{ page.stat.away.shots-on-goal }}</td>
-        </tr>
-        <tr>
-          <td>{{ page.stat.home.ball-possession }}</td>
-          <td class="text-center">Ball Possession</td>
-          <td class="text-end">{{ page.stat.away.ball-possession }}</td>
         </tr>
         <tr>
           <td>{{ page.stat.home.fouls }}</td>
