--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -87,6 +87,11 @@ header: header-match
           <td class="text-end">{{ page.stat.away.shots-on-goal }}</td>
         </tr>
         <tr>
+          <td>{{ page.stat.home.saves }}</td>
+          <td class="text-center">Saves</td>
+          <td class="text-end">{{ page.stat.away.saves }}</td>
+        </tr>
+        <tr>
           <td>{{ page.stat.home.fouls }}</td>
           <td class="text-center">Fouls</td>
           <td class="text-end">{{ page.stat.away.fouls }}</td>
