--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -59,14 +59,14 @@ header: header-match
 <div class="text-white bg-dark py-5">
   <div class="container-sm">
     <h1 class="fw-bolder text-uppercase pb-5">Statistics</h1>
-    <div class="d-flex justify-content-between pb-4">
+    <div class="d-flex justify-content-between align-items-center pb-4">
       <div class="text-start">
-        <img src="{% if page.home.logo %}{{ page.home.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block float-start border-0 pe-2" width="30" height="30">
-        <span class="text-uppercase fw-bolder">{{ page.home.name }}</span>
+        <img src="{% if page.home.logo %}{{ page.home.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block float-start border-0" width="30" height="30">
+        <span class="text-uppercase fw-bolder ps-2">{{ page.home.name }}</span>
       </div>
       <div class="text-end">
-        <img src="{% if page.away.logo %}{{ page.away.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block float-end border-0 ps-2" width="30" height="30">
-        <span class="text-uppercase fw-bolder">{{ page.away.name }}</span>
+        <img src="{% if page.away.logo %}{{ page.away.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block float-end border-0" width="30" height="30">
+        <span class="text-uppercase fw-bolder pe-2">{{ page.away.name }}</span>
       </div>
     </div>
     <table class="table table-dark">
