--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -102,6 +102,11 @@ header: header-match
           <td class="text-end">{{ page.stat.away.yellow-cards }}</td>
         </tr>
         <tr>
+          <td>{{ page.stat.home.red-cards }}</td>
+          <td class="text-center">Red Cards</td>
+          <td class="text-end">{{ page.stat.away.red-cards }}</td>
+        </tr>
+        <tr>
           <td>{{ page.stat.home.offsides }}</td>
           <td class="text-center">Offsides</td>
           <td class="text-end">{{ page.stat.away.offsides }}</td>
