--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -9,7 +9,7 @@ header: header-match
     <div class="container-sm bg-transparent py-5">
       <div class="row row-cols-1">
         <div class="col">
-          <div class="card text-white bg-transparent border-0">
+          <div class="card text-white bg-transparent border-0 p-0">
             <div class="card-header d-flex justify-content-between border-0">
               <h1 class="fw-bolder text-uppercase">lineup</h1>
               <div class="d-flex justify-content-center align-items-start">
