--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -9,7 +9,7 @@ header: header-match
     <div class="container-sm bg-transparent py-5">
       <div class="row row-cols-1">
         <div class="col">
-          <div class="card text-white bg-transparent border-0 p-0">
+          <div class="card text-white bg-transparent border-0">
             <div class="card-header d-flex justify-content-between border-0">
               <h1 class="fw-bolder text-uppercase">lineup</h1>
               <div class="d-flex justify-content-center align-items-start">
@@ -59,14 +59,14 @@ header: header-match
 <div class="text-white bg-dark py-5">
   <div class="container-sm">
     <h1 class="fw-bolder text-uppercase pb-5">Statistics</h1>
-    <div class="d-flex justify-content-between align-items-center pb-4">
-      <div class="text-start">
-        <img src="{% if page.home.logo %}{{ page.home.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block float-start border-0" width="30" height="30">
-        <span class="text-uppercase fw-bolder ps-2">{{ page.home.name }}</span>
+    <div class="d-flex justify-content-center align-items-center pb-4">
+      <div>
+        <span class="text-uppercase fw-bolder pe-2">{{ page.home.name }}</span>
+        <img src="{% if page.home.logo %}{{ page.home.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-d-block border-0" width="30" height="30">
       </div>
-      <div class="text-end">
-        <img src="{% if page.away.logo %}{{ page.away.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block float-end border-0" width="30" height="30">
-        <span class="text-uppercase fw-bolder pe-2">{{ page.away.name }}</span>
+      <div>
+        <img src="{% if page.away.logo %}{{ page.away.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block border-0" width="30" height="30">
+        <span class="text-uppercase fw-bolder ps-2">{{ page.away.name }}</span>
       </div>
     </div>
     <table class="table table-dark">
