--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -10,7 +10,7 @@ header: header-match
       <div class="row row-cols-1">
         <div class="col">
           <div class="card text-white bg-transparent border-0">
-            <div class="card-header d-flex justify-content-between border-0">
+            <div class="card-header d-flex justify-content-between border-0 px-0">
               <h1 class="fw-bolder text-uppercase">lineup</h1>
               <div class="d-flex justify-content-center align-items-start">
                 <div class="d-block text-end">
@@ -27,7 +27,7 @@ header: header-match
               </div>
             </div>
             <div class="pt-5 pb-3 text-white bg-transparent">
-              <div class="row row-cols-3 g-1">
+              <div class="row row-cols-3 g-2">
                 {% for player in page.lineup %}
                 <span class="col-2 fs-5 fw-bolder text-uppercase text-end text-secondary pe-2">{{ player.no-punggung }}</span>
                 <span class="col-2 fs-6 text-uppercase text-center badge border border-secondary text-secondary">{{ player.position }}</span>
@@ -36,7 +36,7 @@ header: header-match
               </div>
             </div>
             {% if page.subs %}
-            <div class="card-body d-flex">
+            <div class="card-body d-flex px-0">
               <div class="flex-flex-shrink-0">
                 <span class="fs-6 fw-bolder text-uppercase">subs:</span>
               </div>
