--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -26,7 +26,7 @@ header: header-match
                 </div>
               </div>
             </div>
-            <div class="pt-5 pb-3 text-white bg-transparent">
+            <div class="py-5 text-white bg-transparent">
               <div class="row row-cols-3 g-2">
                 {% for player in page.lineup %}
                 <span class="col-2 fs-5 fw-bolder text-uppercase text-end text-secondary pe-2">{{ player.no-punggung }}</span>
@@ -62,10 +62,10 @@ header: header-match
     <div class="d-flex justify-content-center align-items-center pb-4">
       <div>
         <span class="text-uppercase fw-bolder pe-2">{{ page.home.name }}</span>
-        <img src="{% if page.home.logo %}{{ page.home.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-d-block border-0" width="30" height="30">
+        <img src="{% if page.home.logo %}{{ page.home.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0" width="30" height="30">
       </div>
       <div>
-        <img src="{% if page.away.logo %}{{ page.away.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="d-block border-0" width="30" height="30">
+        <img src="{% if page.away.logo %}{{ page.away.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0" width="30" height="30">
         <span class="text-uppercase fw-bolder ps-2">{{ page.away.name }}</span>
       </div>
     </div>
