--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -60,11 +60,11 @@ header: header-match
   <div class="container-sm">
     <h1 class="fw-bolder text-uppercase pb-5">Statistics</h1>
     <div class="d-flex justify-content-center align-items-center pb-4">
-      <div>
+      <div class="pe-1">
         <span class="text-uppercase fw-bolder pe-2">{{ page.home.name }}</span>
         <img src="{% if page.home.logo %}{{ page.home.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0" width="30" height="30">
       </div>
-      <div>
+      <div class="ps-1">
         <img src="{% if page.away.logo %}{{ page.away.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0" width="30" height="30">
         <span class="text-uppercase fw-bolder ps-2">{{ page.away.name }}</span>
       </div>
