--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -61,7 +61,7 @@ header: header-match
     <h1 class="fw-bolder text-uppercase pb-5">Statistics</h1>
     <div class="d-flex justify-content-center align-items-center pb-4">
       <div class="w-50 pe-1">
-        <span class="text-uppercase fw-bolder text-end pe-1">{{ page.home.name }}</span>
+        <span class="text-uppercase fw-bolder float-end pe-1">{{ page.home.name }}</span>
         <img src="{% if page.home.logo %}{{ page.home.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="float-end border-0" width="30" height="30">
       </div>
       <div class="w-50 ps-1">
