--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -59,8 +59,8 @@ header: header-match
 <div class="text-white bg-dark py-5">
   <div class="container-sm">
     <h1 class="fw-bolder text-uppercase pb-5">Statistics</h1>
-    <div class="d-flex justify-content-center align-items-center pb-4">
-      <div class="w-auto pe-1">
+    <div class="d-flex flex-row justify-content-center align-items-center pb-4">
+      <div class="w-50 pe-1">
         <span class="text-uppercase fw-bolder pe-1">{{ page.home.name }}</span>
         <img src="{% if page.home.logo %}{{ page.home.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" alt="" class="border-0" width="30" height="30">
       </div>
