--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -123,10 +123,12 @@ header: header-match
 {% endif %}
 
 {% if page.gallery %}
-<div>
+<div class="text-white bg-dark py-5">
   <div class="container-sm">
+    <h1 class="fw-bolder text-uppercase pb-3">Gallery</h1>
     {% if page.gallery.photos %}
-    <div class="row row-cols-1 row-cols-md-2">
+    <h4 class="fw-bolder text-uppercase pb-3">Photo</h4>
+    <div class="row row-cols-1 row-cols-md-2 g-2">
       {% for photo in page.gallery.photos %}
       <div class="col">
         <img src="{{ photo.url }}" alt="" class="img-fluid">
