--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -69,7 +69,7 @@ header: header-match
         <span class="text-uppercase fw-bolder ps-1">{{ page.away.name }}</span>
       </div>
     </div>
-    <table class="table table-dark">
+    <table class="table table-dark" style="max-width: 20em;">
       <tbody>
         <tr>
           <td>{{ page.stat.home.ball-possession }}</td>
