--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -72,49 +72,49 @@ header: header-match
     <table class="table table-dark mx-auto" style="max-width: 35em;">
       <tbody>
         <tr>
-          <td class="fw-bolder fs-5">{{ page.stat.home.shots }}</td>
+          <td class="fw-bolder">{{ page.stat.home.shots }}</td>
           <td class="text-center">Shots</td>
-          <td class="text-end fw-bolder fs-5">{{ page.stat.away.shots }}</td>
+          <td class="text-end fw-bolder">{{ page.stat.away.shots }}</td>
         </tr>
         <tr>
-          <td class="fw-bolder fs-5">{{ page.stat.home.shots-on-goal }}</td>
+          <td class="fw-bolder">{{ page.stat.home.shots-on-goal }}</td>
           <td class="text-center">Shots on goal</td>
-          <td class="text-end fw-bolder fs-5">{{ page.stat.away.shots-on-goal }}</td>
+          <td class="text-end fw-bolder">{{ page.stat.away.shots-on-goal }}</td>
         </tr>
         <tr>
-          <td class="fw-bolder fs-5">{{ page.stat.home.saves }}</td>
+          <td class="fw-bolder">{{ page.stat.home.saves }}</td>
           <td class="text-center">Saves</td>
-          <td class="text-end fw-bolder fs-5">{{ page.stat.away.saves }}</td>
+          <td class="text-end fw-bolder">{{ page.stat.away.saves }}</td>
         </tr>
         <tr>
-          <td class="fw-bolder fs-5">{{ page.stat.home.fouls }}</td>
+          <td class="fw-bolder">{{ page.stat.home.fouls }}</td>
           <td class="text-center">Fouls</td>
-          <td class="text-end fw-bolder fs-5">{{ page.stat.away.fouls }}</td>
+          <td class="text-end fw-bolder">{{ page.stat.away.fouls }}</td>
         </tr>
         <tr>
-          <td class="fw-bolder fs-5">{{ page.stat.home.yellow-cards }}</td>
+          <td class="fw-bolder">{{ page.stat.home.yellow-cards }}</td>
           <td class="text-center">Yellow Cards</td>
-          <td class="text-end fw-bolder fs-5">{{ page.stat.away.yellow-cards }}</td>
+          <td class="text-end fw-bolder">{{ page.stat.away.yellow-cards }}</td>
         </tr>
         <tr>
-          <td class="fw-bolder fs-5">{{ page.stat.home.red-cards }}</td>
+          <td class="fw-bolder">{{ page.stat.home.red-cards }}</td>
           <td class="text-center">Red Cards</td>
-          <td class="text-end fw-bolder fs-5">{{ page.stat.away.red-cards }}</td>
+          <td class="text-end fw-bolder">{{ page.stat.away.red-cards }}</td>
         </tr>
         <tr>
-          <td class="fw-bolder fs-5">{{ page.stat.home.offsides }}</td>
+          <td class="fw-bolder">{{ page.stat.home.offsides }}</td>
           <td class="text-center">Offsides</td>
-          <td class="text-end fw-bolder fs-5">{{ page.stat.away.offsides }}</td>
+          <td class="text-end fw-bolder">{{ page.stat.away.offsides }}</td>
         </tr>
         <tr>
-          <td class="fw-bolder fs-5">{{ page.stat.home.corners }}</td>
+          <td class="fw-bolder">{{ page.stat.home.corners }}</td>
           <td class="text-center">Corners</td>
-          <td class="text-end fw-bolder fs-5">{{ page.stat.away.corners }}</td>
+          <td class="text-end fw-bolder">{{ page.stat.away.corners }}</td>
         </tr>
         <tr>
-          <td class="fw-bolder fs-5">{{ page.stat.home.ball-possession }}</td>
+          <td class="fw-bolder">{{ page.stat.home.ball-possession }}</td>
           <td class="text-center">Ball Possession</td>
-          <td class="text-end fw-bolder fs-5">{{ page.stat.away.ball-possession }}</td>
+          <td class="text-end fw-bolder">{{ page.stat.away.ball-possession }}</td>
         </tr>
       </tbody>
     </table>
