--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -69,7 +69,7 @@ header: header-match
         <span class="text-uppercase fw-bolder ps-1">{{ page.away.name }}</span>
       </div>
     </div>
-    <table class="table table-dark mx-auto" style="max-width: 40em;">
+    <table class="table bg-transparent mx-auto" style="max-width: 40em;">
       <tbody>
         <tr>
           <td class="fw-bolder">{{ page.stat.home.shots }}</td>
