--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -56,7 +56,7 @@ header: header-match
 {% endif %}
 
 {% if page.stat %}
-<div class="text-white bg-transparent py-5" style="background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1));">
+<div class="text-white bg-transparent py-5" style="background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2));">
   <div class="container-sm">
     <h1 class="fw-bolder text-uppercase pb-5">Statistics</h1>
     <div class="d-flex align-items-center mx-auto pb-3" style="max-width: 40em;">
@@ -69,7 +69,7 @@ header: header-match
         <span class="text-uppercase fw-bolder ps-1">{{ page.away.name }}</span>
       </div>
     </div>
-    <table class="table bg-transparent mx-auto" style="max-width: 40em;">
+    <table class="table text-white bg-transparent mx-auto" style="max-width: 40em;">
       <tbody>
         <tr>
           <td class="fw-bolder">{{ page.stat.home.shots }}</td>
