--- a/_layouts/match.html
+++ b/_layouts/match.html
@@ -123,7 +123,7 @@ header: header-match
 {% endif %}
 
 {% if page.gallery %}
-<div class="text-white bg-dark py-5">
+<div class="text-white bg-transparent py-5" style="background-image: linear-gradient(to top left, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8));">
   <div class="container-sm">
     <h1 class="fw-bolder text-uppercase pb-5">Gallery</h1>
     {% if page.gallery.photos %}
