--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -1,5 +1,5 @@
 
-<header style="min-height: 480px; background-image: linear-gradient(to bottom left, rgba(33, 33, 33, 33), rgba(21, 21, 21, 21), rgba(33, 33, 33, 33));">
+<header class="text-white bg-dark" style="min-height: 480px; background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5));">
   <div>
     <div class="container py-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
