--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -22,7 +22,7 @@
         </div>
         <div class="col d-flex flex-column justify-content-center text-white text-center text-md-start">
           <p class="fw-bolder text-uppercase lh-1 mb-3" style="font-size: 4em;">{{ page.no-punggung }}</p>
-          <p class="badge bg-light text-dark text-uppercase">{{ page.position }}</p>
+          <span class="badge bg-light text-dark text-uppercase fs-3">{{ page.position }}</span>
           <p class="fw-bolder text-uppercase lh-1" style="font-size: 3em;">{{ page.title }}</p>
         </div>
       </div>
