--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -10,6 +10,7 @@
         <nav class="nav col-12 col-md-auto justify-content-center mb-md-0">
           {% assign currentPage = page.url %}
           <a {% if currentPage == '/' %} class="nav-link link-secondary fw-bolder px-2" {% else %} class="nav-link link-light fw-bolder px-2" {% endif %} href="/">Home</a>
+          <a {% if currentPage == '/news/' %} class="nav-link link-secondary fw-bolder px-2" {% else %} class="nav-link link-light fw-bolder px-2" {% endif %} href="{{ 'news' | relative_url }}">News</a>
           <a {% if currentPage == '/players/' %} class="nav-link link-secondary fw-bolder px-2" {% else %} class="nav-link link-light fw-bolder px-2" {% endif %} href="{{ 'players' | relative_url }}">Players</a>
           <a {% if currentPage == '/matches/' %} class="nav-link link-secondary fw-bolder px-2" {% else %} class="nav-link link-light fw-bolder px-2" {% endif %} href="{{ 'matches' | relative_url }}">Matches</a>
         </nav>
