--- a/_includes/header-player.html
+++ b/_includes/header-player.html
@@ -19,7 +19,7 @@
     <div class="container-sm pb-3">
       <div class="row row-cols-1 row-cols-md-2 g-2">
         <div class="col">
-          <img src="{% if page.image %}{{ page.image }}{% else %}{{ '/assets/img/pp/blank-pp.png' | relative_url }}{% endif %}" alt="" class="d-block rounded-0 mx-auto img-fluid" width="auto" height="400">
+          <img src="{% if page.image %}{{ page.image }}{% else %}{{ '/assets/img/pp/blank-pp.png' | relative_url }}{% endif %}" alt="" class="d-block rounded-0 mx-auto" width="300" height="400">
         </div>
         <div class="col d-flex flex-column justify-content-center text-white text-center text-md-start">
           <p class="fw-bolder text-uppercase lh-1 mb-3" style="font-size: 3em;">{{ page.no-punggung }}</p>
