--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,5 +9,5 @@
       </div>
     </div>
   </div>
-  <div class="text-center text-secondary pb-5"><small>© 2022 TESA FOOTBALL CLUB.</small></div>
+  <div class="text-center text-secondary py-5"><small>© 2022 TESA FOOTBALL CLUB.</small></div>
 </footer>
